allow avoiding Whats New dialog on startup

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -229,6 +229,7 @@
     <string name="settings">Nastavení</string>
     <string name="customize_colors">Přizpůsobit barvy</string>
     <string name="use_english_language">Use English language</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
     <string name="show_hidden_items">Zobrazit skryté položky</string>
     <string name="font_size">Font size</string>
     <string name="small">Small</string>
