--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -233,6 +233,7 @@
     <string name="settings">Postavke</string>
     <string name="customize_colors">Prilagodi boje</string>
     <string name="use_english_language">Koristi Engleski jezik</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
     <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Veličina fonta</string>
     <string name="small">Malo</string>
