--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -229,6 +229,7 @@
     <string name="settings">設定</string>
     <string name="customize_colors">表示色のカスタマイズ</string>
     <string name="use_english_language">Use English language</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
     <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">メモのフォントサイズ</string>
     <string name="small">小</string>
