--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -229,6 +229,7 @@
     <string name="settings">Ayarlar</string>
     <string name="customize_colors">Renkleri özelleştir</string>
     <string name="use_english_language">İngilizce dilini kullan</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
     <string name="show_hidden_items">Gizli öğeleri göster</string>
     <string name="font_size">Yazı tipi boyutu</string>
     <string name="small">Küçük</string>
