--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -228,6 +228,7 @@
     <string name="settings">設定</string>
     <string name="customize_colors">自訂顏色</string>
     <string name="use_english_language">使用英文語言</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
     <string name="show_hidden_items">顯示隱藏的項目</string>
     <string name="font_size">字體大小</string>
     <string name="small">小</string>
