--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -229,6 +229,7 @@
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
     <string name="use_english_language">App in Englisch verwenden</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
     <string name="show_hidden_items">Versteckte Elemente anzeigen</string>
     <string name="font_size">Schriftgröße</string>
     <string name="small">Klein</string>
