allow avoiding Whats New dialog on startup

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -229,6 +229,7 @@
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
     <string name="use_english_language">App in Englisch verwenden</string>
+    <string name="avoid_whats_new">Beim Start nach einem Update \"Neue Funktionen\" nicht anzeigen</string>
     <string name="show_hidden_items">Versteckte Elemente anzeigen</string>
     <string name="font_size">Schriftgröße</string>
     <string name="small">Klein</string>
