--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -80,8 +80,8 @@
     <!-- File operation conflicts -->
     <string name="file_already_exists">Bestand \"%1$s\" bestaat reeds</string>
     <string name="file_already_exists_overwrite">Bestand \"%1$s\" bestaat reeds. Overschrijven?</string>
-    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
-    <string name="merge">Merge</string>
+    <string name="folder_already_exists">Map \"%1$s\" bestaat reeds</string>
+    <string name="merge">Samenvoegen</string>
     <string name="overwrite">Overschrijven</string>
     <string name="skip">Overslaan</string>
     <string name="append">Voeg \'_1\' toe</string>
