--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -169,8 +169,8 @@
     <string name="unhide">Nicht verstecken</string>
     <string name="hide_folder">Ordner verstecken</string>
     <string name="unhide_folder">Ordner nicht verstecken</string>
-    <string name="temporarily_show_hidden">Versteckte Elemente kurz zeigen</string>
-    <string name="stop_showing_hidden">Versteckte Elemente wieder verbergen</string>
+    <string name="temporarily_show_hidden">Verstecktes kurz zeigen</string>
+    <string name="stop_showing_hidden">Verstecktes wieder verbergen</string>
     <string name="maximum_share_reached">So viel Inhalt kann nicht auf einmal geteilt werden</string>
 
     <!-- Sorting -->
