--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -80,7 +80,7 @@
     <!-- File operation conflicts -->
     <string name="file_already_exists">檔案 \"%1$s\" 已經存在</string>
     <string name="file_already_exists_overwrite">檔案 \"%1$s\" 已經存在。 要覆蓋嗎?</string>
-    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="folder_already_exists">資料夾 \"%1$s\" 已經存在</string>
     <string name="overwrite">覆蓋</string>
     <string name="skip">跳過</string>
     <string name="append">添加到 \'_1\'</string>
@@ -114,7 +114,7 @@
     <string name="files_count">總檔案數</string>
     <string name="resolution">解析度</string>
     <string name="duration">持續時間</string>
-    <string name="artist">藝術家</string>
+    <string name="artist">作者</string>
     <string name="album">相簿</string>
     <string name="focal_length">焦距</string>
     <string name="exposure_time">曝光時間</string>
@@ -227,8 +227,8 @@
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="customize_colors">自訂顏色</string>
-    <string name="use_english_language">使用英文語言</string>
-    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
+    <string name="use_english_language">強制使用英文語言</string>
+    <string name="avoid_whats_new">程式更新後，啟動時不顯示更新了什麼</string>
     <string name="show_hidden_items">顯示隱藏的項目</string>
     <string name="font_size">字體大小</string>
     <string name="small">小</string>
@@ -241,10 +241,10 @@
     <string name="show_info_bubble">拖曳滾動條時，顯示訊息氣泡</string>
 
     <!-- Setting sections -->
-    <string name="visibility">Visibility</string>
-    <string name="security">Security</string>
-    <string name="scrolling">Scrolling</string>
-    <string name="file_operations">File operations</string>
+    <string name="visibility">可見度</string>
+    <string name="security">安全性</string>
+    <string name="scrolling">滑動</string>
+    <string name="file_operations">檔案操作</string>
 
     <!-- Import / Export -->
     <string name="importing">正在導入…</string>
