--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -229,7 +229,7 @@
     <string name="settings">Instellingen</string>
     <string name="customize_colors">Kleuren aanpassen</string>
     <string name="use_english_language">Use English language</string>
-    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
+    <string name="avoid_whats_new">\"Wat is er nieuw\" niet tonen</string>
     <string name="show_hidden_items">Verborgen items tonen</string>
     <string name="font_size">Lettergrootte</string>
     <string name="small">Klein</string>
