--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -80,8 +80,8 @@
     <!-- File operation conflicts -->
     <string name="file_already_exists">L’arxiu \"%1$s\" ja existeix</string>
     <string name="file_already_exists_overwrite">L’arxiu \"%1$s\" ja existeix. El vos sobreescriure?</string>
-    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
-    <string name="merge">Merge</string>
+    <string name="folder_already_exists">La carpeta \"%1$s\" ja existeix</string>
+    <string name="merge">Fusionar</string>
     <string name="overwrite">Sobreescriure</string>
     <string name="skip">Saltar</string>
     <string name="append">Afegir \'_1\'</string>
@@ -228,7 +228,7 @@
     <string name="settings">Ajustaments</string>
     <string name="customize_colors">Canviar colors</string>
     <string name="use_english_language">Usar l’idioma Anglès</string>
-    <string name="avoid_whats_new">Avoid showing What\'s New on startup after app upgrade</string>
+    <string name="avoid_whats_new">No mostrar les novetats a l\'inici després de l\'actualització de l\'aplicació</string>
     <string name="show_hidden_items">Mostra elements ocults</string>
     <string name="font_size">Mida de la font</string>
     <string name="small">Petita</string>
