fixing a closing tag

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -28,7 +28,7 @@
     <string name="no_audio_permissions">Se requiere permiso de audio</string>
 
     <!-- Renaming -->
-    <string name="rename_file">Renombrar archivo</stri"avoid_whats_newng>
+    <string name="rename_file">Renombrar archivo</string>
     <string name="rename_folder">Renombrar carpeta</string>
     <string name="rename_file_error">No se pudo renombrar el archivo</string>
     <string name="rename_folder_error">No se pudo renombrar la carpeta</string>
