--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -229,7 +229,7 @@
     <string name="settings">Impostazioni</string>
     <string name="customize_colors">Personalizza i colori</string>
     <string name="use_english_language">Forza la lingua inglese</string>
-    <string name="avoid_whats_new">Non mostrare le novità all'avvio dopo un aggiornamento</string>
+    <string name="avoid_whats_new">Non mostrare le novità all\'avvio dopo un aggiornamento</string>
     <string name="show_hidden_items">Mostra gli elementi nascosti</string>
     <string name="font_size">Dimensione carattere</string>
     <string name="small">Piccolo</string>
