--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -233,7 +233,7 @@
     <string name="settings">Ustawienia</string>
     <string name="customize_colors">Dostosuj kolory</string>
     <string name="use_english_language">Wymuś używanie przez aplikację języka angielskiego</string>
-    <string name="avoid_whats_new">Nie pokazuj okna \'Co nowego\' po aktualizacji aplikacji</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
     <string name="show_hidden_items">Pokazuj ukryte elementy</string>
     <string name="font_size">Rozmiar czcionki</string>
     <string name="small">Mała</string>
