--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -229,7 +229,7 @@
     <string name="settings">设置</string>
     <string name="customize_colors">自定义颜色</string>
     <string name="use_english_language">强制使用英语语言</string>
-    <string name="avoid_whats_new">升级后不再显示新功能</string>
+    <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
     <string name="show_hidden_items">显示隐藏的项目</string>
     <string name="font_size">字体大小</string>
     <string name="small">小</string>
