--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -228,7 +228,7 @@
     <string name="settings">Ajustaments</string>
     <string name="customize_colors">Canviar colors</string>
     <string name="use_english_language">Usar l’idioma Anglès</string>
-    <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
+    <string name="avoid_whats_new">Permetre mostrar novetats a l\'inici</string>
     <string name="show_hidden_items">Mostra elements ocults</string>
     <string name="font_size">Mida de la font</string>
     <string name="small">Petita</string>
