--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -10,7 +10,7 @@
     <string name="no_app_found">Nenhum aplicativo encontrado</string>
     <string name="set_as">Definir como</string>
     <string name="value_copied_to_clipboard">Valor copiado para a área de transferência</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">Desconhecido</string>
 
     <!-- Search -->
     <string name="search">Pesquisar</string>
@@ -229,7 +229,7 @@
     <string name="settings">Configurações</string>
     <string name="customize_colors">Personalizar cores</string>
     <string name="use_english_language">Usar o idioma inglês</string>
-    <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
+    <string name="avoid_whats_new">Não mostrar novidades das atualizações na inicialização</string>
     <string name="show_hidden_items">Mostrar itens ocultos</string>
     <string name="font_size">Tamanho do texto</string>
     <string name="small">Pequeno</string>
