--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -11,6 +11,8 @@
     <string name="set_as">Aseta</string>
     <string name="value_copied_to_clipboard">Valeur copiée dans le presse-papier</string>
     <string name="unknown">Unknown</string>
+    <string name="always">Always</string>
+    <string name="never">Never</string>
 
     <!-- Search -->
     <string name="search">Search</string>
