--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -11,6 +11,8 @@
     <string name="set_as">Nastaviť ako</string>
     <string name="value_copied_to_clipboard">Hodnota bola vložená do schránky</string>
     <string name="unknown">Neznámy</string>
+    <string name="always">Vždy</string>
+    <string name="never">Nikdy</string>
 
     <!-- Search -->
     <string name="search">Hľadať</string>
