--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -11,6 +11,8 @@
     <string name="set_as">애플리케이션에 설정</string>
     <string name="value_copied_to_clipboard">클립보드에 복사됨</string>
     <string name="unknown">알 수 없음</string>
+    <string name="always">Always</string>
+    <string name="never">Never</string>
 
     <!-- Search -->
     <string name="search">검색</string>
