--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -11,6 +11,8 @@
     <string name="set_as">Sett som</string>
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
     <string name="unknown">Unknown</string>
+    <string name="always">Always</string>
+    <string name="never">Never</string>
 
     <!-- Search -->
     <string name="search">Søk</string>
