--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -11,6 +11,8 @@
     <string name="set_as">Definir como</string>
     <string name="value_copied_to_clipboard">Valor copiado para a área de transferência</string>
     <string name="unknown">Desconhecido</string>
+    <string name="always">Always</string>
+    <string name="never">Never</string>
 
     <!-- Search -->
     <string name="search">Pesquisar</string>
