--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -11,6 +11,8 @@
     <string name="set_as">Ayarla</string>
     <string name="value_copied_to_clipboard">Değer panoya kopyalandı</string>
     <string name="unknown">Bilinmeyen</string>
+    <string name="always">Always</string>
+    <string name="never">Never</string>
 
     <!-- Search -->
     <string name="search">Ara</string>
