--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -11,6 +11,8 @@
     <string name="set_as">设置为</string>
     <string name="value_copied_to_clipboard">颜色值已复制到剪贴板</string>
     <string name="unknown">未知</string>
+    <string name="always">Always</string>
+    <string name="never">Never</string>
 
     <!-- Search -->
     <string name="search">搜索</string>
