--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -11,8 +11,8 @@
     <string name="set_as">Establir com</string>
     <string name="value_copied_to_clipboard">Valor copiat al portaretalls</string>
     <string name="unknown">Desconegut</string>
-    <string name="always">Always</string>
-    <string name="never">Never</string>
+    <string name="always">Sempre</string>
+    <string name="never">Mai</string>
 
     <!-- Search -->
     <string name="search">Buscar</string>
