--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -11,8 +11,8 @@
     <string name="set_as">Establecer como</string>
     <string name="value_copied_to_clipboard">Valor copiado en el portapapeles</string>
     <string name="unknown">Desconocido</string>
-    <string name="always">Always</string>
-    <string name="never">Never</string>
+    <string name="always">Siempre</string>
+    <string name="never">Nunca</string>
 
     <!-- Search -->
     <string name="search">Buscar</string>
